Linked API up to show movie results, ratings, & info

--- a/17 - Movie App/styles.css
+++ b/17 - Movie App/styles.css
@@ -44,6 +44,8 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
+  /* align-items: center; */
+  justify-content: center;
 }
 
 .movie {
@@ -53,7 +55,7 @@ main {
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
   position: relative;
   overflow: hidden;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .movie img {
@@ -94,6 +96,7 @@ main {
 
 .overview {
   background-color: #fff;
+  border-radius: 10px;
   padding: 2rem;
   position: absolute;
   left: 0;
