--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,43 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
-  overflow: hidden;
+  flex-direction: column;
   text-align: center;
   align-items: center;
   justify-content: center;
+  padding-bottom: 20%;
+}
+
+h1 {
+  display: flex;
+  position: fixed;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgray;
+  width: 100%;
+  height: 15%;
+  margin: 0;
+  padding: 0;
+  top: 5px;
+  z-index: 100;
+}
+
+.challenges {
+  display: grid;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  top: 100px;
 }
 
 ul li {
   list-style-type: none;
   text-align: left;
   font-size: 20px;
+  width: 100%;
 }
 
 a {
