--- a/styles.css
+++ b/styles.css
@@ -29,12 +29,14 @@ h1 {
 
 .challenges {
   display: grid;
-  position: relative;
+  position: absolute;
   align-items: center;
   justify-content: center;
   height: 100%;
   width: 100%;
-  top: 100px;
+  top: 20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul li {
@@ -47,4 +49,23 @@ ul li {
 a {
   text-decoration: none;
   color: blue;
+}
+
+.footer {
+  position: relative;
+  height: 100px;
+  width: 50%;
+  bottom: 0;
+  margin-top: 25%;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
+.footer ul li {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
